[package]
name = "puppetdb"
version = "1.3.0"
description = "PuppetDB CLI tool in rust."
readme = "README.md"
documentation = "http://puppetlabs.github.io/puppetdb-cli/index.html"
repository = "https://github.com/puppetlabs/puppetdb-cli"
license-file = "LICENSE"
keywords = ["puppet", "puppetdb", "puppetdb-cli"]
authors = ["Andrew Roetker <andrew.roetker@puppet.com>", "Ryan Senior <ryan.senior@puppet.com>"]

[lib]
name = "puppetdb"
path = "src/lib.rs"

[[bin]]
name = "puppet-db"
path = "src/db.rs"

[[bin]]
name = "puppet-query"
path = "src/query.rs"

[dependencies]
kitchensink = "0.3"
hyper = "0.9"
docopt = "0.6"
rustc-serialize = "0.3"
url = "1.2"

[dependencies.multipart]
version = "0.8"
default-features = false
features = ["hyper", "client"]

[features]
default = []
puppet-access = []

[dev-dependencies]
tempdir = "0.3"
