[package]
name = "puppetdb"
version = "1.3.0"
description = "PuppetDB CLI tool in rust."
readme = "README.md"
documentation = "http://puppetlabs.github.io/puppetdb-cli/index.html"
repository = "https://github.com/puppetlabs/puppetdb-cli"
license-file = "LICENSE"
keywords = ["puppet", "puppetdb", "puppetdb-cli"]
authors = ["Andrew Roetker <andrew.roetker@puppet.com>", "Ryan Senior <ryan.senior@puppet.com>"]

[lib]
name = "puppetdb"
path = "src/lib.rs"

[[bin]]
name = "puppet-db"
path = "src/db.rs"

[[bin]]
name = "puppet-query"
path = "src/query.rs"

[dependencies]
kitchensink = "0.4"
hyper = "0.10"
docopt = "0.7"
rustc-serialize = "0.3"
url = "1.4"
serde = "1.0"
serde_json = "1.0"
serde-transcode = "1.0"

[dependencies.multipart]
version = "0.12"
default-features = false
features = ["hyper", "client"]

[features]
default = []
puppet-access = []

[dev-dependencies]
tempdir = "0.3"
